side-bar developing begin

--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
 </head>
 
 <body>
-	<div class="wrapper">Hello!
+	<div class="wrapper">
+		<!-- Инна -->
 
+		<!-- side-bar -->
+		<div class="side-bar">
+			<nav>
+				<div class="side-bar__container">
+					<li>
+						<a href=""><img src="" alt="иконка ссылки на раздел профиль">Профиль</a>
+					</li>
+					<li>
+						<a href=""><img src="" alt="иконка ссылки на раздел дневник">Дневник</a>
+					</li>
+					<li>
+						<a href=""><img src="" alt="иконка ссылки на раздел динамика">Динамика</a>
+					</li>
+					<li>
+						<a href=""><img src="" alt="иконка ссылки на раздел Статьи">Статьи</a>
+					</li>
+				</div>
+			</nav>
+		</div>
+	<!-- side-bar -->
+
+		<!-- Инна -->
 	</div>
 
 	<script src="./modules/profile.js"></script>
