--- a/index.html
+++ b/index.html
@@ -16,25 +16,28 @@
 		<!-- Инна -->
 
 		<!-- side-bar -->
-		<div class="side-bar">
-			<nav>
-				<div class="side-bar__container">
+			<div class="side-bar">
+				<nav>
 					<li>
-						<a href=""><img src="" alt="иконка ссылки на раздел профиль">Профиль</a>
+						<a class="side-bar__link" href="./index.html"><img src="./assets/images/index/profile.svg"
+								alt="иконка ссылки на раздел профиль">Профиль</a>
 					</li>
 					<li>
-						<a href=""><img src="" alt="иконка ссылки на раздел дневник">Дневник</a>
+						<a class="side-bar__link" href="./pages/diary.html"><img src="./assets/images/index/diary.svg"
+								alt="иконка ссылки на раздел дневник">Дневник</a>
 					</li>
 					<li>
-						<a href=""><img src="" alt="иконка ссылки на раздел динамика">Динамика</a>
+						<a class="side-bar__link" href="./pages/charts.html"><img src="./assets/images/index/graph.svg"
+								alt="иконка ссылки на раздел динамика">Динамика</a>
 					</li>
 					<li>
-						<a href=""><img src="" alt="иконка ссылки на раздел Статьи">Статьи</a>
+						<a class="side-bar__link" href="./pages/articles.html"><img src="./assets/images/index/sampling.svg"
+								alt="иконка ссылки на раздел Статьи">Статьи</a>
 					</li>
-				</div>
-			</nav>
-		</div>
-	<!-- side-bar -->
+				</nav>
+			</div>
+		<!-- side-bar -->
+
 
 		<!-- Инна -->
 	</div>
