intermediate option,do not merge

--- a/index.html
+++ b/index.html
@@ -9,14 +9,38 @@
 	<link rel="stylesheet" href="./assets/styles/scss/layouts/normalize.css">
 	<link rel="shortcut icon" href="./assets/icons/calories.png" />
 	<link rel="stylesheet" href="./assets/styles/scss/main.css" />
+	<link rel="stylesheet" href="./assets/styles/scss/pages/registration.css" />
 </head>
 
 <body>
-	<div class="wrapper">Hello!
+	<div class="wrapper">
+
+		<!-- Анжела -->
+<div class="button">
+	<a href="#" id = "open_pop_up"> Оставить заявку</a>
+</div>
+		<div class="pop_up">
+			<div class="pop_up_container">
+				<div class="pop_up_body">
+					<p>Оставить заказ</p>
+					<form action="">
+						<input type="text" placeholder="Имя">
+						<input type="text" placeholder="Телефон">
+						<button>Оставить заказ</button>
+
+					</form>
+					<div class="pop_up_close">&#10006</div>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Анжела -->
 
 	</div>
 
 	<script src="./modules/profile.js"></script>
+	
 </body>
 
 </html>
