--- a/index.html
+++ b/index.html
@@ -17,23 +17,54 @@
 
 		<!-- Анжела -->
 <div class="button">
-	<a href="#" id = "open_pop_up"> Оставить заявку</a>
+	<a href="#" id = "open_pop-up"> Оставить заявку</a>
 </div>
-		<div class="pop_up">
-			<div class="pop_up_container">
-				<div class="pop_up_body">
-					<p>Оставить заказ</p>
+		<div class="registration__pop-up">
+			<div class="registration__pop-up_container">
+				<div class="registration__pop-up_body">
+					<p class = "registration__title">Регистрация</p>
+					<p class="registration__title_description">Введите Ваши данные:</p>
 					<form action="">
-						<input type="text" placeholder="Имя">
-						<input type="text" placeholder="Телефон">
-						<button>Оставить заказ</button>
+						<input type="registration__text" placeholder="Имя">
+						<input type="registration__text" placeholder="Фамилия">
+						<input type="registration__text" placeholder="Дата рождения">
+						<input type="registration__text" placeholder="E-mail">
+						<input type="registration__text" placeholder="Пароль">
+						<input type="registration__text" placeholder="Повторите пароль">
+						<button>Ввод</button>
+						<button>Отмена</button>
 
 					</form>
-					<div class="pop_up_close">&#10006</div>
+
+					<div class="registration__pop-up_close">&#10006</div>
 				</div>
 			</div>
 
 		</div>
+
+		
+				<div class="customization__pop-up">
+					<div class="customization__pop-up_container">
+						<div class="customization__pop-up_body">
+							<p class = "customization__title">Регистрация</p>
+							<p class="customization__title_description">Введите Ваши данные:</p>
+							<form action="">
+								<input type="customization__text" placeholder="Имя">
+								<input type="customization__text" placeholder="Фамилия">
+								<input type="customization__text" placeholder="Дата рождения">
+								<input type="customization__text" placeholder="E-mail">
+								<input type="customization__text" placeholder="Пароль">
+								<input type="customization__text" placeholder="Повторите пароль">
+								<button>Ввод</button>
+								<button>Отмена</button>
+		
+							</form>
+		
+							<div class="registration__pop-up_close">&#10006</div>
+						</div>
+					</div>
+		
+				</div>
 
 		<!-- Анжела -->
 
