--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<title>Мой профиль</title>
 	<link rel="stylesheet" href="./assets/styles/scss/layouts/normalize.css">
 	<link rel="shortcut icon" href="./assets/icons/calories.png" />
-	<link rel="stylesheet" href="./assets/styles/scss/main.css" />
+	<!-- <link rel="stylesheet" href="./assets/styles/scss/main.css" /> -->
+	<link rel="stylesheet" href="./assets/styles/scss/pages/index.css">
+	<link rel="stylesheet" href="./assets/styles/scss/layouts/side-bar.css">
 </head>
 
 <body>
@@ -37,7 +39,16 @@
 				</nav>
 			</div>
 		<!-- side-bar -->
+		<main class="profile">
+			<div class="profile-welcome"></div>
+			<section class="profile-RSK">
+				<h1 class="profile-RSK__title">Вычислить рекомендованную <br> суточную калорийность</h1>
+				<form action="">
 
+				</form>
+				<div class="profile-RSK__recommendations"></div>
+			</section>
+		</main>
 
 		<!-- Инна -->
 	</div>
