side-bar rewriting

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 			</nav>
 		</div>
 		<!-- side-bar -->
-		<main class="profile">
+
+		<!-- <main class="profile">
 			<div class="profile-welcome"></div>
 			<section class="profile-RSK">
 				<h1 class="profile-RSK__title">Вычислить рекомендованную <br> суточную калорийность</h1>
@@ -108,7 +109,7 @@
 					</div>
 				</div>
 			</section>
-		</main>
+		</main> -->
 
 		<!-- Инна -->
 	</div>
