profile welcome-form dev

--- a/index.html
+++ b/index.html
@@ -40,15 +40,29 @@
 		</div>
 		<!-- side-bar -->
 
-		<!-- <main class="profile">
-			<div class="profile-welcome"></div>
+		<main class="profile">
+			<div class="profile-welcome">
+				<div class="profile-welcome__wripper">
+					<form action="#" class="profile-welcome__form">
+						<img src="./assets/images/index/circle.svg" alt="логотип приложения в виде графика-доната">
+						<p class="profile-welcome__form-greet font-black">Добро пожаловать!</p>
+						<div class="profile-welcome__form-inputs">
+							<input type="text" placeholder="Логин" class="profile-welcome__form-input">
+							<input type="text" placeholder="Пароль" class="profile-welcome__form-input">
+						</div>
+						<button class="profile-welcome__form-button">Войти</button>
+					</form>
+					<button class="profile-welcome__button-reg">Регистрация</button>
+				</div>
+				<div class="profile-paternity font-black">Calorie tracker © 2023</div>
+			</div>
 			<section class="profile-RSK">
 				<h1 class="profile-RSK__title">Вычислить рекомендованную <br> суточную калорийность</h1>
-				<form action="" class="profile-RSK__form">
+				<form action="#" class="profile-RSK__form">
 					<div class="profile-RSK__form-wrapper">
 						<div class="profile-RSK__form-element">
 							<p class="profile-RSK__form-attribute">Выберите цель:</p>
-							<select name="" id="">
+							<select name="" id="" class="font-black profile-RSK__form-input">
 								<option value="">Снижение веса</option>
 								<option value="">Поддержание веса</option>
 								<option value="">Набор веса</option>
@@ -56,18 +70,18 @@
 						</div>
 						<div class="profile-RSK__form-element">
 							<p class="profile-RSK__form-attribute">Возраст:</p>
-							<input type="number">
+							<input type="number" class="font-black profile-RSK__form-input">
 						</div>
 						<div class="profile-RSK__form-element">
 							<p class="profile-RSK__form-attribute">Пол:</p>
-							<select name="" id="">
+							<select name="" id="" class="font-black profile-RSK__form-input">
 								<option value="">Мужской</option>
 								<option value="">Женский</option>
 							</select>
 						</div>
 						<div class="profile-RSK__form-element">
 							<p class="profile-RSK__form-attribute">Образ жизни:</p>
-							<select name="" id="">
+							<select name="" id="" class="font-black profile-RSK__form-input">
 								<option value="">Сидячий</option>
 								<option value="">Малоактивный</option>
 								<option value="">Активный</option>
@@ -76,40 +90,41 @@
 						</div>
 						<div class="profile-RSK__form-element">
 							<p class="profile-RSK__form-attribute">Вес, кг:</p>
-							<input type="number">
+							<input type="number" class="font-black profile-RSK__form-input">
 						</div>
 						<div class="profile-RSK__form-element">
 							<p class="profile-RSK__form-attribute">Рост, см:</p>
-							<input type="number">
+							<input type="number" class="font-black profile-RSK__form-input">
 						</div>
 					</div>
-					<button>Вычислить РСК</button>
-
+					<button class="profile-RSK__form-button">Вычислить РСК</button>
 				</form>
+
 				<div class="profile-RSK__recommendations">
 					<div class="profile-RSK__kkal">
 						<p class="font-black">Ваша дневная норма составляет</p>
-						<p class="font-orange">2153 ккал</p>
+						<p class="font-orange"><span class="font-figure">2153</span> ккал</p>
 					</div>
 					<div class="profile-RSK__macro">
 						<div>
 							<div class="profile-RSK__macroelement font-black">Белки</div>
-							<div class="profile-RSK__macroelement-amount font-blue">97 г</div>
+							<div class="profile-RSK__macroelement-amount font-figure font-blue">97 г</div>
 						</div>
 						<div>
 							<div class="profile-RSK__macroelement font-black">Жиры</div>
-							<div class="profile-RSK__macroelement-amount font-blue">54 г</div>
+							<div class="profile-RSK__macroelement-amount font-figure font-blue">54 г</div>
 						</div>
 						<div>
 							<div class="profile-RSK__macroelement font-black">Углеводы</div>
-							<div class="profile-RSK__macroelement-amount font-blue">319 г</div>
+							<div class="profile-RSK__macroelement-amount font-figure font-blue">319 г</div>
 						</div>
 					</div>
-					<div class="profile-RSK__weight font-black">Эффективный вес - <span class="font-blue">54 кг</span>
+					<div class="profile-RSK__weight font-black">Эффективный вес - <span class="font-figure font-blue">54
+							кг</span>
 					</div>
 				</div>
 			</section>
-		</main> -->
+		</main>
 
 		<!-- Инна -->
 	</div>
