--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		</div>
 		<!-- side-bar -->
 
+		<!-- main -->
 		<main class="profile">
 			<div class="profile-welcome">
 				<div class="profile-welcome__wripper">
@@ -125,6 +126,7 @@
 				</div>
 			</section>
 		</main>
+		<!-- main -->
 
 		<!-- Инна -->
 	</div>
