--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 		<!-- Анжела -->
 <div class="button">
-	<a href="#" id = "open_pop-up"> Оставить заявку</a>
+	<a href="#" id = "registration__pop-up_open" > Оставить заявку</a>
 </div>
-		<div class="registration__pop-up">
+		<div class="registration__pop-up" id = "registration__pop-up">
 			<div class="registration__pop-up_container">
 				<div class="registration__pop-up_body">
 					<p class = "registration__title">Регистрация</p>
@@ -36,14 +36,14 @@
 
 					</form>
 
-					<div class="registration__pop-up_close">&#10006</div>
+					<div class="registration__pop-up_close" id = "registration__pop-up_close" >&#10006</div>
 				</div>
 			</div>
 
 		</div>
 
 		
-				<div class="customization__pop-up">
+				<!-- <div class="customization__pop-up">
 					<div class="customization__pop-up_container">
 						<div class="customization__pop-up_body">
 							<p class = "customization__title">Регистрация</p>
@@ -64,13 +64,14 @@
 						</div>
 					</div>
 		
-				</div>
+				</div> -->
 
 		<!-- Анжела -->
 
 	</div>
 
 	<script src="./modules/profile.js"></script>
+	<script src="./modules/registration.js"></script>
 	
 </body>
 
