--- a/pages/diary.html
+++ b/pages/diary.html
@@ -141,7 +141,9 @@
 						<img class="diary-water-tracker__img-water-drop" src="./../assets/diaryimg/diary-water-droplet 1.png" alt="капля воды">
 						<div>Трекер воды</div>
 					</div>
-					<div><span class="diary-water-tracker__crrnt-res diary-water-tracker__top-res_font_inter">0</span> мл<span class="diary-water-tracker__top-res diary-water-tracker__top-res_font_inter"> / 1800</span> <span class="diary-water-tracker__top-res">мл</span></div>
+					<div>
+						<span class="diary-water-tracker__crrnt-res diary-water-tracker__top-res_font_inter">0</span> <span class="diary-water-tracker__crrnt-res-ml">мл</span><span class="diary-water-tracker__top-res diary-water-tracker__top-res_font_inter"> / 1800</span> <span class="diary-water-tracker__top-res">мл</span>
+					</div>
 				</div>
 				<div class="diary-water-tracker__text">Отслеживайте свои ежедневные цели по поддержанию водного баланса. Если у вас нормальный вес, то рекомендовано 25-30 мл жидкости на 1 кг массы тела. То есть если вы весите 60 кг, то выпивать нужно 30х60 = 1800 мл или 1,8 л в день.</div>
 
