--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- <link rel="stylesheet" href="./assets/styles/scss/main.css" /> -->
 	<link rel="stylesheet" href="./assets/styles/scss/pages/index.css">
 	<link rel="stylesheet" href="./assets/styles/scss/layouts/side-bar.css">
-	<link rel="stylesheet" href="./assets/styles/scss/productnonfound.css">
+	<link rel="stylesheet" href="./assets/styles/scss/pages/productnotfound.css">
 	<link rel="stylesheet" href="./assets/styles/scss/pages/addnewproduct.css">
 
 </head>
@@ -179,6 +179,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- Алла -->
 	<!-- Поп ап продукт не найден -->
 	<div class="wrapper">
 		<div class="productnotfound__popup">
@@ -198,7 +199,7 @@
 	</div>
 	
 	
-	<script src="./modules/productnotfound.js"></script>
+	<script src="./modules/newproduct.js"></script>
 	<script src="./modules/profile.js"></script>
 	
 </body>
