added logic for calculating the RSK

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div
                   class="profile-RSK__macroelement-amount font-figure font-blue"
                 >
-                  <span class="proteins">125</span>
+                  <span class="proteins">125 г</span>
                 </div>
               </div>
               <div>
@@ -180,7 +180,7 @@
                 <div
                   class="profile-RSK__macroelement-amount font-figure font-blue"
                 >
-                  <span class="fats">60</span>
+                  <span class="fats">60 г</span>
                 </div>
               </div>
               <div>
@@ -188,12 +188,13 @@
                 <div
                   class="profile-RSK__macroelement-amount font-figure font-blue"
                 >
-                  <span class="carbohydrates">240</span>
+                  <span class="carbohydrates">240 г</span>
                 </div>
               </div>
             </div>
             <div class="profile-RSK__weight font-black">
-              Эффективный вес - <span class="font-figure font-blue">54 кг</span>
+              Эффективный вес -
+              <span class="font-figure font-blue optimal-weight">59 кг</span>
             </div>
           </div>
         </section>
