--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="side-bar">
 			<nav>
 				<li>
-					<a class="side-bar__link" href="#"><img src="./assets/images/index/profile.svg"
+					<a class="side-bar__link" href="./index.html"><img src="./assets/images/index/profile.svg"
 							alt="иконка ссылки на раздел профиль">Профиль</a>
 				</li>
 				<li class="side-bar__menu">
@@ -32,8 +32,8 @@
 					<a class="side-bar__link" href="#"><img src="./assets/images/index/graph.svg"
 							alt="иконка ссылки на раздел динамика">Динамика</a>
 				</li>
-				<li class="side-bar__menu">
-					<a class="side-bar__link" href="#"><img src="./assets/images/index/sampling.svg"
+				<li>
+					<a class="side-bar__link" href="./pages/articles.html"><img src="./assets/images/index/sampling.svg"
 							alt="иконка ссылки на раздел Статьи">Статьи</a>
 				</li>
 			</nav>
@@ -56,6 +56,69 @@
 					<button class="profile-welcome__button-reg">Регистрация</button>
 				</div>
 				<div class="profile-paternity font-black">Calorie tracker © 2023</div>
+				<!-- <img src="" alt="шестеренки для выхода в меню настроек"> -->
+				<!-- <div class="profile-user">
+					<div class="profile-user__data">
+						<img src="" alt="Аватарка пользователя по умолчанию в виде мужчины в кружочке">
+						<div>Кристина Иванова</div>
+						<div>26 лет</div>
+						<div>
+							<div>
+								<div>Вес</div>
+								<div>60 кг</div>
+							</div>
+							<div>
+								<div>Рост</div>
+								<div>166 см</div>
+							</div>
+							<div>
+								<div>Цель</div>
+								<div>55 кг</div>
+							</div>
+						</div>
+					</div>
+					<div class="profile-user__date" >
+						<div>Сводка</div>
+						<div></div>
+						<div>14 мая 2023</div>
+					</div>
+					<div class="profile-user__kkal">
+						<div>
+							<div>
+								<div>Употреблено калорий:</div>
+								<div>1360</div>
+							</div>
+							<div>
+								<div>Осталось калорий:</div>
+								<div>240</div>
+							</div>
+						</div>
+						<canvas></canvas>
+						<div>
+							<div>
+								<div>Углеводы</div>
+								<div></div>
+								<div></div>
+							</div>
+							<div>
+								<div>Белки</div>
+								<div></div>
+								<div></div>
+							</div>
+							<div>
+								<div>Жиры</div>
+								<div></div>
+								<div></div>
+							</div>
+						</div>
+					</div>
+					<div class="profile-user__water" >
+						<div>
+							<img src="" alt="Рисунок капли">Трекер воды
+						</div>
+						<div>1250 ml <span>/ 2000 ml</span></div>
+					</div>
+				</div> -->
 			</div>
 			<section class="profile-RSK">
 				<h1 class="profile-RSK__title">Вычислить рекомендованную <br> суточную калорийность</h1>
@@ -134,9 +197,15 @@
 	<!-- notification pop-up -->
 
 	<div class="profile-notification" id="profile-notification">
-		<div class="b-popup-content">
-			Text in Popup
-			<a href="javascript:popUpHide()">Hide popup</a>
+		<div class="profile-notification__content">
+			<img src="./assets/images/index/info.svg" alt="Иконка с i в кружочке">
+			<div>
+				<p class="profile-notification__text">Чтобы продолжить, <a class="profile-notification__enter"
+						href="#">войдите</a> в личный кабинет</p>
+				<p class="profile-notification__text"> или <a class="profile-notification__reg"
+						href="">зарегистрируйтесь</a></p>
+			</div>
+			<!-- <a href="javascript:popUpHide()">Hide popup</a> -->
 		</div>
 	</div>
 	<!-- notification pop-up -->
