--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 						<input id = "customization__text_surname" class="customization__text" type="text" placeholder="Фамилия">
 						<input id = "customization__text_bday" class="customization__text" type="text" placeholder="Дата рождения">
 						<input id = "customization__text_email" class="customization__text" type="text" placeholder="E-mail">
-						<input class="customization__text_" type="text" placeholder="Пароль">
+						<input class="customization__text_password" type="text" placeholder="Пароль">
 						<p class = "customization__title_description">Задать цель, кг:</p>
-						<input type="customization__text_password" >
+						<input type="customization__text" >
 						<button >Сохранить</button>
 
 					</form>
