--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 			<div class="profile-welcome">
 				<div class="profile-welcome__wripper">
 					<form action="#" class="profile-welcome__form">
-						<img class="profile-welcome__img" src="./assets/images/index/circle.svg" alt="логотип приложения в виде графика-доната">
+						<img class="profile-welcome__img" src="./assets/images/index/circle.svg"
+							alt="логотип приложения в виде графика-доната">
 						<p class="profile-welcome__form-greet font-black">Добро пожаловать!</p>
 						<div class="profile-welcome__form-inputs">
 							<input type="text" placeholder="Логин" class="profile-welcome__form-input">
@@ -58,9 +59,11 @@
 				<div class="profile-paternity font-black">Calorie tracker © 2023</div>
 
 				<div class="profile-user">
-					<img class="profile-user__settings" src="./assets/images/index/settings.svg" alt="шестеренки для выхода в меню настроек">
+					<img class="profile-user__settings" src="./assets/images/index/settings.svg"
+						alt="шестеренки для выхода в меню настроек">
 					<div class="profile-user__data">
-						<img src="./assets/images/index/avatar.svg" alt="Аватарка пользователя по умолчанию в виде мужчины в кружочке">
+						<img src="./assets/images/index/avatar.svg"
+							alt="Аватарка пользователя по умолчанию в виде мужчины в кружочке">
 						<div class="profile-user__data-name">Кристина Иванова</div>
 						<div class="profile-user__data-age font-black">26 лет</div>
 						<div class="profile-user__states">
@@ -78,7 +81,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="profile-user__date" >
+					<div class="profile-user__date">
 						<h2 class="font-blue">Сводка</h2>
 						<div class="profile-user__date-devider">
 							<div class="profile-user__date-line"></div>
@@ -87,36 +90,45 @@
 						<div class="profile-user__date-value font-black">14 мая 2023</div>
 					</div>
 					<div class="profile-user__kkal">
-						<div>
+						<div class="profile-user__kkal-wrapper">
 							<div>
-								<div>Употреблено калорий:</div>
-								<div>1360</div>
+								<div class="profile-user__kkal-block">
+									<h3 class="profile-user__kkal-name font-black">Употреблено калорий:</h3>
+									<div class="profile-user__kkal-amount">1360</div>
+								</div>
+								<div class="profile-user__kkal-block">
+									<h3 class="profile-user__kkal-name font-black">Осталось калорий:</h3>
+									<div class="profile-user__kkal-amount">240</div>
+								</div>
 							</div>
-							<div>
-								<div>Осталось калорий:</div>
-								<div>240</div>
+							<div class="profile-user__doughnut-chart"><canvas id="doughnut"></canvas>
 							</div>
 						</div>
-						<canvas></canvas>
-						<div>
-							<div>
-								<div>Углеводы</div>
-								<div></div>
-								<div></div>
+						<div class="profile-user__macro">
+							<div class="profile-user__macro-block">
+								<h3>Углеводы</h3>
+								<div class="profile-user__macro-scale">
+									<div class="profile-user__macro-scale-line"></div>
+								</div>
+								<div class="profile-user__macro-amount">142.6 г</div>
 							</div>
-							<div>
-								<div>Белки</div>
-								<div></div>
-								<div></div>
+							<div class="profile-user__macro-block">
+								<h3>Белки</h3>
+								<div class="profile-user__macro-scale">
+									<div class="profile-user__macro-scale-line"></div>
+								</div>
+								<div class="profile-user__macro-amount">94.4 г</div>
 							</div>
-							<div>
-								<div>Жиры</div>
-								<div></div>
-								<div></div>
+							<div  class="profile-user__macro-block">
+								<h3>Жиры</h3>
+								<div class="profile-user__macro-scale">
+									<div class="profile-user__macro-scale-line"></div>
+								</div>
+								<div class="profile-user__macro-amount">47.1 г</div>
 							</div>
 						</div>
 					</div>
-					<div class="profile-user__water" >
+					<div class="profile-user__water">
 						<div>
 							<img src="./assets/images/index/water-droplet.svg" alt="Рисунок капли">Трекер воды
 						</div>
@@ -209,13 +221,14 @@
 				<p class="profile-notification__text"> или <a class="profile-notification__reg"
 						href="">зарегистрируйтесь</a></p>
 			</div>
-			<!-- <a href="javascript:popUpHide()">Hide popup</a> -->
 		</div>
 	</div>
 	<!-- notification pop-up -->
 
 	<!-- Инна -->
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 	<script src="./modules/profile.js"></script>
 	<script src="./modules/profile_user notification pop-up.js"></script>
 </body>
